# icpaykit-ICPK

./: .env  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json
.dfx/local/: wallets.json
.dfx/local/canisters/backend/: constructor.did  init_args.txt  service.did.d.ts  service.did.js
.dfx/local/lsp/: bkyz2-fmaaa-aaaaa-qaaaq-cai.did
.dfx/network/local/: ic-btc-adapter-config.json  ic-btc-adapter-socket-path  ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
.dfx/network/local/state/replicated_state/node-100/: committee_signing_key  derived_node_id  idkg_mega_encryption_key  ni_dkg_dealing_encryption_key  (+2 more)
.dfx/playground/: canister_ids.json  canister_timestamps.json
.dfx/playground/canisters/backend/: service.did.d.ts  service.did.js
.dfx/playground/lsp/: mdwwn-niaaa-aaaab-qabta-cai.did  z7chj-7qaaa-aaaab-qacbq-cai.did
src/backend/: Cargo.toml  backend.did  build.sh
src/backend/src/: lib.rs
src/backend/src/api/: charge.rs  checkout.rs  mod.rs  webhook.rs
src/backend/src/auth/: merchant.rs  mod.rs
src/backend/src/errors/: api_error.rs  auth_error.rs  mod.rs  request_error.rs  validation_error.rs
src/backend/src/models/: charge.rs  checkout.rs  merchant.rs  mod.rs  payment.rs  webhook.rs
src/backend/src/services/: charge.rs  checkout.rs  merchant.rs  mod.rs  payment.rs  webhook.rs
src/backend/src/state/: store.rs
src/backend/src/utils/: crypto.rs  id.rs  mod.rs  request.rs  validation.rs
(+87 files in other folders)
