[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-ledger-types = "0.4.2"
sha2 = { version = "0.9.9", default-features = false }
hex = "0.4"
hmac = "0.12"
thiserror = "1.0"
lazy_static = "1.4"
blake2 = "0.9"
bitcoin = "0.30.2"